# Rocket_AvionicsSoftware_V3

./: .gitignore  README.md
freertos-simulation/: .cproject  .project
freertos-simulation/board-hardware-drivers/BMI08x-Sensor-API/Inc/: bmp3_defs.h
freertos-simulation/board-hardware-drivers/CMSIS/Device/ST/STM32F4xx/Source/: stm32f4xx_hal_msp.c
freertos-simulation/board-hardware-drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_def.h  stm32f4xx_hal_uart.h
freertos-simulation/board-hardware-drivers/STM32F4xx_HAL_Driver/Inc/Custom/: stm32f4xx_hal_conf.h
freertos-simulation/board-hardware-drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_timebase_tim.c
freertos-simulation/build-on-linux/: CMakeLists.txt  configurations.yaml  generator.py
freertos-simulation/build-on-windows/: CMakeLists.txt  configurations.yaml  generator.py
freertos-simulation/configurations/: FreeRTOSConfig.h  UserConfig.h
freertos-simulation/flight-computer/: Run-time-stats-utils.c  main.c  main.h
freertos-simulation/flight-computer/board/: board.c  board.h  hardware_definitions.h  interrupt_handlers.c  interrupt_handlers.h
freertos-simulation/flight-computer/board/components/: buzzer.h  flash.c  flash.h  icm20948_imu_sensor.h  imu_sensor.h  pressure_sensor.h  recovery.c  recovery.h
freertos-simulation/flight-computer/board/components/impl/: buzzer.c  icm20948_imu_sensor.c  imu_sensor.c  pressure_sensor.c
freertos-simulation/flight-computer/command-line-interface/: controller.c  controller.h  definitions.h
freertos-simulation/flight-computer/command-line-interface/tools/: configure.c  configure.h  e-match.c  e-match.h  mem.c  mem.h  read.c  read.h  save.c  save.h  sysctl.c  sysctl.h
freertos-simulation/flight-computer/core/: flight_controller.c  flight_controller.h  system_configuration.c  system_configuration.h
freertos-simulation/flight-computer/event-detection/: data_window.h  event_detector.c  event_detector.h
freertos-simulation/flight-computer/memory-management/: memory_manager.c  memory_manager.h  queue.c  queue.h
freertos-simulation/flight-computer/protocols/: SPI.h  UART.h
freertos-simulation/flight-computer/protocols/impl/: SPI.c  UART.c
freertos-simulation/flight-computer/sim-port/: hal_port.h
freertos-simulation/flight-computer/sim-port/os-kernel/FreeRTOS/Source/portable/MSVC-MingW/: port.c
freertos-simulation/flight-computer/sim-port/os-kernel/FreeRTOS/Source/portable/MemMang/: heap_5.c
freertos-simulation/flight-computer/sim-port/os-kernel/FreeRTOS/Source/portable/POSIX/: port.c  portmacro.h
freertos-simulation/flight-computer/sim-port/sensor-simulation/: buzzer.c  cots_flight.data.csv  csv.h  datafeeder.cpp  datafeeder.h  flash.c  imu_sensor.c  pressure_sensor.c  srad_flight.data.csv
freertos-simulation/flight-computer/sim-port/transmission-protocols/: SPI.c  UART.c
freertos-simulation/flight-computer/utilities/: common.h
freertos-simulation/os-kernel/FreeRTOS-Plus-CLI/: FreeRTOS_CLI.c
freertos-simulation/os-kernel/FreeRTOS/Source/include/: FreeRTOSConfig.h
freertos-simulation/os-kernel/FreeRTOS/Source/portable/MemMang/: heap_1.c  heap_4.c
